Desired fixed vs variable revenue funtionality

--- a/README.html
+++ b/README.html
@@ -562,6 +562,16 @@ substance but backward-looking). - Europe &amp; elsewhere: Mix of BBM
 and RAB-based methods, often mandated by law to ensure cost-reflective,
 transparent pricing.</p>
 </div>
+<div id="references" class="section level2">
+<h2>References</h2>
+<p><a href="https://www.aer.gov.au/system/files/2024-11/AER%20-%20Financeability%20guideline%20-%20Final%20decision%20-%20November%202024.pdf">AER
+Financeability guideline (1)</a><br />
+<a href="https://www.aer.gov.au/system/files/2024-11/AER%20-%20Financeability%20guideline%20-%20November%202024_0.pdf">AER
+Financeability guideline (2)</a><br />
+<a href="https://www.esc.vic.gov.au/sites/default/files/documents/9460b29d-8e62-46aa-8eb4-ff3091683fde.pdf">Assessing
+the Financeability of Regulated Water Service Providers</a> <a href="https://www.nerinstitute.net/sites/default/files/events/downloads/2025/neri_seminar_assessing_funding_models_for_water_services_provision.pdf">Assessing
+Funding Models for Water Services Provision</a></p>
+</div>
 </div>
 <div class="footnotes footnotes-end-of-document">
 <hr />
